[package]
name = "sty"
version = "0.2.0"
edition = "2018"
description = "Color terminal outputs in a minimal, macro-based, and dead simple way."
authors = ["leecade<leecade@163.com>"]
documentation = "https://docs.rs/sty"
license = "MIT"
readme = "README.md"
repository = "https://github.com/leecade/sty"
keywords = ["cli", "color", "macro-based", "terminal", "ansi_term"]
categories = ["command-line-interface"]

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sty_macro"
harness = false
